# polymarket-btc-mm

./: .env.example  .gitignore  README.md  metrics.md  pyproject.toml  requirements.txt
docs/: core_system.md
experiments/: README.md
src/polymarket_mm/: __init__.py  attribution.py  backtest.py  backtest_cli.py  clob.py  config.py  execution.py  fair_value.py  gamma.py  live_runner.py  market_data.py  merge.py  positions.py  quoting.py  risk.py  strategy.py
tests/: test_attribution.py  test_clob.py  test_execution.py  test_fair_value.py  test_gamma.py  test_market_data.py  test_positions.py  test_quoting.py  test_risk.py  test_strategy.py
