[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-mm"
version = "0.1.0"
description = "Polymarket BTC 15-minute binary market-making engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "requests>=2.31",
    "websocket-client>=1.8",
]

[project.optional-dependencies]
live = ["py-clob-client>=0.23", "web3>=7.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
